--- a/FishingBoatsAnomalyDetection/fishingboatsprediction/notebooks/AEKF_tests.ipynb
+++ b/FishingBoatsAnomalyDetection/fishingboatsprediction/notebooks/AEKF_tests.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 532,
    "id": "b81379a2",
    "metadata": {},
    "outputs": [],
@@ -19,17 +19,19 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import re\n",
+    "import math\n",
     "\n",
     "from scipy.linalg import inv, cholesky\n",
     "from scipy import stats\n",
-    "from scipy.stats import vonmises, wrapcauchy, norm, cauchy, uniform\n",
+    "from scipy.stats import entropy\n",
+    "# from scipy import spatial\n",
+    "# from scipy.stats import vonmises, wrapcauchy, norm, cauchy, uniform\n",
     "from scipy.optimize import minimize\n",
-    "from sklearn.metrics.pairwise import haversine_distances\n",
     "\n",
-    "import matplotlib.pyplot as plt\n",
-    "from scipy import spatial\n",
+    "from sklearn.metrics.pairwise import haversine_distances\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "import math\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "import hdbscan\n",
     "\n",
     "from tqdm import tqdm\n",
     "\n",
@@ -41,6 +43,8 @@
     "import movingpandas as mpd\n",
     "import plotly.express as px\n",
     "import plotly.graph_objects as go\n",
+    "\n",
+    "# import matplotlib.pyplot as plt\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
@@ -60,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 386,
+   "execution_count": 536,
    "id": "cab485e9",
    "metadata": {},
    "outputs": [],
@@ -90,6 +94,19 @@
     "target_freq: str = f\"{target_freq_in_minutes}min\"\n",
     "sample_T: pd.Timedelta = pd.Timedelta(minutes=target_freq_in_minutes)\n",
     "\n",
+    "def get_data(file):\n",
+    "    len_match = re.search(r'len_(\\d+)_mmsi_(\\d+)', file)\n",
+    "    if len_match:\n",
+    "        length = int(len_match.group(1))\n",
+    "        mmsi = len_match.group(2)\n",
+    "        print(length, mmsi)\n",
+    "    df_original = pd.read_csv(file, index_col=0)\n",
+    "    df_original[cols.Sampled_Date] = pd.to_datetime(df_original[cols.Sampled_Date], errors=\"coerce\")\n",
+    "\n",
+    "    df = df_original.copy()\n",
+    "    df['target_id'] = mmsi  \n",
+    "    df = df.set_index(cols.Sampled_Date)\n",
+    "    return df\n",
     "\n",
     "def get_trajectory_sequences(trajectory_sampled: pd.DataFrame, time_column_name=None\n",
     "    ) -> List[pd.DataFrame]:\n",
@@ -568,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 518,
    "id": "dcd5553b",
    "metadata": {},
    "outputs": [],
@@ -909,7 +926,7 @@
     "    return measurements, time_steps\n",
     "\n",
     "# Example usage\n",
-    "def run_aekf_example(df: pd.DataFrame, max_to_predict: int = 10):\n",
+    "def run_aekf(df: pd.DataFrame, max_to_predict: int = 10):\n",
     "    \"\"\"Example of running AEKF on sample data\"\"\"   \n",
     "    # Process data\n",
     "    measurements, time_steps = process_trajectory_data(df)\n",
@@ -1202,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 507,
    "id": "f9f1b461",
    "metadata": {},
    "outputs": [],
@@ -1306,8 +1323,8 @@
     "            width=360/bins,  # Width of each bar in degrees\n",
     "            marker=dict(\n",
     "                color=counts,\n",
-    "                colorscale='Aggrnyl',\n",
-    "                showscale=True,\n",
+    "                colorscale='Tealgrn',\n",
+    "                showscale=False,\n",
     "                colorbar_title=\"Count\"\n",
     "            ),\n",
     "            name='Angle Distribution'\n",
@@ -1334,7 +1351,7 @@
     "    \n",
     "    return fig\n",
     "\n",
-    "def fit_circular_distributions(angles_series):\n",
+    "def fit_circular_distributions(angles_series, use_bins=True):\n",
     "    \"\"\"\n",
     "    Test a pandas Series of angles (-180 to 180) against various circular distributions\n",
     "    and return the probability/likelihood of each distribution fitting the data.\n",
@@ -1354,13 +1371,9 @@
     "    angles_rad = np.deg2rad(angles_series.dropna())\n",
     "    angles_rad = (angles_rad + 2*np.pi) % (2*np.pi)\n",
     "    \n",
-    "    num_bins = 72\n",
-    "    bins = np.linspace(0, 2 * np.pi, num_bins + 1)\n",
-    "    bin_indices = np.digitize(angles_rad, bins, right=False)\n",
-    "    bin_indices = np.clip(bin_indices - 1, 0, num_bins - 1)\n",
-    "    bin_midpoints = (bins[:-1] + bins[1:]) / 2\n",
-    "    binned_angles = bin_midpoints[bin_indices]\n",
-    "    angles_rad = np.unique(binned_angles)\n",
+    "\n",
+    "    if use_bins:\n",
+    "        angles_rad= angles_rad_to_unique_bins(angles_rad)\n",
     "    \n",
     "    n = len(angles_rad)\n",
     "    \n",
@@ -1740,6 +1753,52 @@
   },
   {
    "cell_type": "markdown",
+   "id": "47ac3cfb",
+   "metadata": {},
+   "source": [
+    "## Entropy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 527,
+   "id": "f76d0619",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_column_entropy(df, column_name, num_bins=36):\n",
+    "    \"\"\"\n",
+    "    Calculate the Shannon entropy of a specified column in a DataFrame with binning for continuous data.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    df (pandas.DataFrame): Input DataFrame\n",
+    "    column_name (str): Name of the column to calculate entropy for\n",
+    "    num_bins (int): Number of bins for histogram discretization (default: 36)\n",
+    "    \n",
+    "    Returns:\n",
+    "    float: Shannon entropy value in bits (using log base 2)\n",
+    "    \"\"\"\n",
+    "    # Check if column exists\n",
+    "    if column_name not in df.columns:\n",
+    "        raise ValueError(f\"Column '{column_name}' not found in DataFrame\")\n",
+    "    \n",
+    "    # Get histogram of values to discretize continuous data\n",
+    "    hist, bin_edges = np.histogram(df[column_name].dropna(), bins=num_bins, density=True)\n",
+    "    \n",
+    "    # Convert histogram to probabilities (normalize to sum to 1)\n",
+    "    probabilities = hist / np.sum(hist)\n",
+    "    \n",
+    "    # Filter out zero probabilities to avoid log(0)\n",
+    "    probabilities = probabilities[probabilities > 0]\n",
+    "    \n",
+    "    # Calculate entropy (in bits, using log base 2)\n",
+    "    entropy_value = entropy(probabilities, base=2)\n",
+    "    \n",
+    "    return entropy_value\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2c9cbe40",
    "metadata": {},
    "source": [
@@ -1748,7 +1807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": null,
    "id": "fe9b0926",
    "metadata": {},
    "outputs": [
@@ -1762,16 +1821,8 @@
    ],
    "source": [
     "file = \"../../data/FishingKoreaAIS_sampled_new/len_388_mmsi_440716900_eta_val_2024-02-08 15:00:00_dest_JEJU.csv\"\n",
-    "len_match = re.search(r'len_(\\d+)_mmsi_(\\d+)', file)\n",
-    "if len_match:\n",
-    "    length = int(len_match.group(1))\n",
-    "    mmsi = len_match.group(2)\n",
-    "    print(length, mmsi)\n",
-    "df_original = pd.read_csv(file, index_col=0)\n",
-    "df_original[cols.Sampled_Date] = pd.to_datetime(df_original[cols.Sampled_Date], errors=\"coerce\")\n",
     "\n",
-    "df = df_original.copy()\n",
-    "df['target_id'] = mmsi  \n",
+    "\n",
     "# df"
    ]
   },
@@ -1785,7 +1836,7 @@
     "n_to_predict = 20\n",
     "df = df_original.copy()\n",
     "df = df.set_index(cols.Sampled_Date)\n",
-    "states_df, covariances, df = run_aekf_example(df, n_to_predict)\n",
+    "states_df, covariances, df = run_aekf(df, n_to_predict)\n",
     "\n",
     "df_sequences = get_trajectory_sequences(df)\n",
     "corrected_df_sequences = get_trajectory_sequences(states_df)\n",
@@ -1806,6 +1857,7 @@
     "# min_window = 10\n",
     "window = 20\n",
     "step = 5\n",
+    "done = False\n",
     "for corrected_df_sequence in corrected_df_sequences:\n",
     "    for i in range(int(len(corrected_df_sequence) / step)):\n",
     "        current_segment = corrected_df_sequence[step*i:window+step*i]\n",
@@ -1813,58 +1865,154 @@
     "            continue\n",
     "        \n",
     "        pseudo_area = (current_segment[cols.Latitude].max() - current_segment[cols.Latitude].min()) * (current_segment[cols.Longitude].max() - current_segment[cols.Longitude].min())\n",
-    "        # print(pseudo_area)\n",
-    "        if pseudo_area < 0.002:\n",
+    "        if pseudo_area < 0.004:\n",
     "            continue\n",
     "        \n",
-    "        original_traj_segment = df[(df.index >= current_segment.index.min()) & (df.index <= current_segment.index.max())]\n",
-    "        \n",
-    "        # if i == 11:\n",
-    "        #     print(current_segment)\n",
-    "        #     original_traj_segment_sequences = get_trajectory_sequences(original_traj_segment)\n",
-    "        #     fig = plot_plotly_trajectory_groups([[current_segment], original_traj_segment_sequences], group_names=[\"AEKF\", \"Initial trajectory\"])\n",
-    "        #     fig.show()\n",
-    "            \n",
     "        divider_results = divider_method_fractal_dimension(current_segment)\n",
     "        d_dim, _, _, _ = divider_results\n",
-    "        print(f\"Divider Method Fractal Dimension for i={i}: {d_dim:.3f}\")\n",
-    "\n",
+    "        # print(f\"Divider Method Fractal Dimension for i={i}: {d_dim:.3f}\")\n",
     "        \n",
-    "        if d_dim > 1.07 and d_dim < 2:\n",
-    "            turning_angles = calculate_turning_angles(current_segment)\n",
-    "            # print(turning_angles)\n",
-    "            \n",
-    "            results = fit_circular_distributions(turning_angles)\n",
-    "            # results = evaluate_circular_distributions(turning_angles)\n",
-    "            print(results)\n",
-    "            \n",
-    "            divider_results = divider_method_fractal_dimension(current_segment)\n",
-    "            d_dim, _, _, _ = divider_results\n",
-    "            print(f\"Divider Method Fractal Dimension: {d_dim:.3f}\")\n",
-    "            # # Print results\n",
-    "            # for dist_name, info in results.items():\n",
-    "            #     print(f\"\\nDistribution: {dist_name}\")\n",
-    "            #     print(f\"Log-Likelihood: {info['log_likelihood']:.4f}\")\n",
-    "            #     print(f\"Parameters: {info['parameters']}\")\n",
+    "        turning_angles = calculate_turning_angles(current_segment)\n",
+    "        results = fit_circular_distributions(turning_angles)\n",
+    "        uniform_coef = float(results[results[\"distribution\"] == \"Uniform Circular\"][\"bic_weight\"])\n",
+    "        # print(results[results[\"distribution\"] == \"Uniform Circular\"][\"bic_weight\"])\n",
     "        \n",
+    "        # if d_dim < 1.00875\n",
+    "        if uniform_coef > 0.5:\n",
     "            fig = plot_circular_distribution(turning_angles, bins=90)\n",
     "            fig.show()\n",
-    "            \n",
-    "            \n",
-    "            # break\n",
-    "            print(current_segment)\n",
-    "            # print(original_traj_segment)\n",
+    "            original_traj_segment = df[(df.index >= current_segment.index.min()) & (df.index <= current_segment.index.max())]\n",
     "            original_traj_segment_sequences = get_trajectory_sequences(original_traj_segment)\n",
     "            fig = plot_plotly_trajectory_groups([[current_segment], original_traj_segment_sequences], group_names=[\"AEKF\", \"Initial trajectory\"])\n",
     "            fig.show()\n",
-    "            # break\n",
-    "        # print(i, len(original_traj))\n",
+    "            done = True\n",
+    "            break\n",
+    "    if done:\n",
+    "        break\n",
+    "        # fig = plot_circular_distribution(turning_angles, bins=90)\n",
+    "        # fig.show()\n",
+    "        # original_traj_segment = df[(df.index >= current_segment.index.min()) & (df.index <= current_segment.index.max())]\n",
+    "        # original_traj_segment_sequences = get_trajectory_sequences(original_traj_segment)\n",
+    "        # fig = plot_plotly_trajectory_groups([[current_segment], original_traj_segment_sequences], group_names=[\"AEKF\", \"Initial trajectory\"])\n",
+    "        # fig.show()\n",
+    "            \n",
+    "        # # Print results\n",
+    "        # for dist_name, info in results.items():\n",
+    "        #     print(f\"\\nDistribution: {dist_name}\")\n",
+    "        #     print(f\"Log-Likelihood: {info['log_likelihood']:.4f}\")\n",
+    "        #     print(f\"Parameters: {info['parameters']}\")\n",
     "        \n",
-    "        # if i == 4:\n",
-    "        #     print(current_segment)\n",
-    "        #     print(original_traj)\n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4d08cf1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cluster Labels for all points:\n",
+      "    mean SOG   std SOG    mean COG  entropy COG  mean omega  Cluster\n",
+      "0  17.772727  2.237226  264.050232     3.589898    0.007642        1\n",
+      "1  18.001899  1.473796  269.652488     3.807355    0.010650        1\n",
+      "2  18.553425  1.485133  282.638481     3.546594    0.011421        1\n",
+      "3  18.150524  1.662423  278.120584     3.418296   -0.003055        1\n",
+      "4  13.508307  6.585871  243.912374     3.459432   -0.006131        2\n",
+      "5   6.742831  6.976514  230.667003     3.321928    0.007892        2\n",
+      "6   1.163431  1.704772  263.021896     2.160964    0.018556        0\n",
+      "7   0.011813  0.026081  275.604258     2.321928    0.000432        0\n",
+      "\n",
+      "Outliers (points labeled as -1):\n",
+      "No outliers detected.\n",
+      "\n",
+      "Number of clusters: 3\n",
+      "Number of outliers: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "fixed_window = True\n",
+    "max_window = 20\n",
+    "min_window = 10\n",
+    "current_window_init = int((max_window + min_window)/2)\n",
+    "current_window = current_window_init\n",
+    "step = 5\n",
+    "\n",
+    "k_sog = 1\n",
+    "k_omega = 10\n",
+    "beta = 0.8\n",
+    "\n",
+    "for corrected_df_sequence in corrected_df_sequences:\n",
+    "    segment_avg_sog, segment_std_sog, segment_avg_omega = None, None, None\n",
+    "    current_window = current_window_init\n",
+    "    \n",
+    "    segment_features = []\n",
+    "     \n",
+    "    for i in range(int(len(corrected_df_sequence) / step)):\n",
+    "        if segment_avg_sog is not None and segment_std_sog is not None and segment_avg_omega is not None:\n",
+    "            estimated_current_window = max(min_window, min(min_window, k_sog * segment_avg_sog / (1 + segment_std_sog) + k_omega / (1 + abs(segment_avg_omega)) ))\n",
+    "            # print(k_sog * segment_avg_sog / (1 + segment_std_sog), k_omega / (1 + abs(segment_avg_omega)) )\n",
+    "            # print(estimated_current_window)\n",
+    "            current_window = int(beta * current_window + (1 - beta) * estimated_current_window)\n",
+    "            # print(current_window)\n",
+    "            \n",
+    "        current_segment = corrected_df_sequence[step*i:current_window+step*i]\n",
+    "        segment_avg_sog = current_segment[cols.SOG].mean()\n",
+    "        segment_std_sog = current_segment[cols.SOG].std()\n",
+    "        segment_avg_omega = current_segment[\"Turn Rate\"].mean()\n",
+    "    \n",
+    "        segment_avg_cog = current_segment[cols.COG].mean()\n",
+    "        segment_entropy_cog = calculate_column_entropy(current_segment, cols.COG)\n",
+    "        \n",
+    "        segment_features.append({\"mean SOG\": segment_avg_sog, \n",
+    "                                 \"std SOG\": segment_std_sog, \n",
+    "                                 \"mean COG\": segment_avg_cog, \n",
+    "                                 \"entropy COG\": segment_entropy_cog, \n",
+    "                                 \"mean omega\": segment_avg_omega})\n",
+    "        \n",
+    "        # print(segment_avg_sog, segment_std_sog, segment_avg_omega)\n",
+    "        \n",
+    "\n",
+    "    break\n",
+    "\n",
+    "X = pd.DataFrame(segment_features)\n",
+    "scaler = StandardScaler()\n",
+    "X_scaled = scaler.fit_transform(X)\n",
+    "\n",
+    "# Step 2: Apply HDBSCAN\n",
+    "# min_cluster_size: minimum number of points to form a cluster\n",
+    "# min_samples: how conservative the clustering is (higher = more points are outliers)\n",
+    "clusterer = hdbscan.HDBSCAN(min_cluster_size=2, min_samples=1, gen_min_span_tree=True)\n",
+    "labels = clusterer.fit_predict(X_scaled)\n",
+    "\n",
+    "# Step 3: Identify outliers\n",
+    "# Points with label -1 are outliers\n",
+    "X['Cluster'] = labels\n",
+    "outliers = X[labels == -1]\n",
+    "\n",
+    "print(\"Cluster Labels for all points:\")\n",
+    "print(X)\n",
+    "print(\"\\nOutliers (points labeled as -1):\")\n",
+    "print(outliers if not outliers.empty else \"No outliers detected.\")\n",
+    "\n",
+    "# Optional: Print number of clusters and outliers\n",
+    "n_clusters = len(set(labels)) - (1 if -1 in labels else 0)\n",
+    "n_outliers = sum(labels == -1)\n",
+    "print(f\"\\nNumber of clusters: {n_clusters}\")\n",
+    "print(f\"Number of outliers: {n_outliers}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7527614",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
