loitering classification and everything else

--- a/FishingBoatsAnomalyDetection/fishingboatsprediction/notebooks/AEKF_tests.ipynb
+++ b/FishingBoatsAnomalyDetection/fishingboatsprediction/notebooks/AEKF_tests.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "b81379a2",
    "metadata": {},
    "outputs": [
@@ -2122,7 +2122,7 @@
    "id": "c5e02118",
    "metadata": {},
    "source": [
-    "## Plotting AIS DATA"
+    "## AIS DATA"
    ]
   },
   {
@@ -3986,7 +3986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "ed458fdf",
    "metadata": {},
    "outputs": [],
@@ -4037,7 +4037,7 @@
     "    \n",
     "    return fig\n",
     "\n",
-    "def find_high_spec_concentration_segments(interpolated_df_sequences, col_name='COG', window_size=40, step_size=10, sc_threshold=0.4):\n",
+    "def find_high_spec_concentration_segments(interpolated_df_sequences, col_name=cols.COG, window_size=40, step_size=10, sc_threshold=0.4):\n",
     "    \"\"\"\n",
     "    Find segments in a list of DataFrames with Spectral Concentration above a threshold.\n",
     "    \n",
@@ -4116,7 +4116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "713248bd",
    "metadata": {},
    "outputs": [],
@@ -4209,9 +4209,7 @@
     "    return uniform_coefs\n",
     "    \n",
     "    if \"HDBSCAN\" in anomaly_detections_to_use:\n",
-    "        X = pd.DataFrame(segment_features)\n",
-    "        scaler = StandardScaler()\n",
-    "        X_scaled = scaler.fit_transform(X)\n",
+    "\n",
     "\n",
     "        # Step 2: Apply HDBSCAN\n",
     "        clusterer = hdbscan.HDBSCAN(min_cluster_size=2, min_samples=1, gen_min_span_tree=True)\n",
@@ -37298,7 +37296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "id": "6aaf1d9d",
    "metadata": {},
    "outputs": [
@@ -45796,7 +45794,7 @@
     "    print(f\"Sequence {res['sequence_index']}, Start Index: {res['start_index']}, \"\n",
     "          f\"Spectral Concentration: {res['spectral_concentration']:.4f}\")\n",
     "    \n",
-    "    segment = interpolated_df_sequences[res['sequence_index']].iloc[res['start_index']:res['start_index'] + window_size]\n",
+    "    \n",
     "    fig = plot_plotly_trajectory_groups([[segment]], group_names=[\"Reciprocating Segment\"])\n",
     "    fig.show()\n",
     "\n",
