hopefully, last commit before defense

--- a/FishingBoatsAnomalyDetection/fishingboatsprediction/notebooks/loitering_classification.ipynb
+++ b/FishingBoatsAnomalyDetection/fishingboatsprediction/notebooks/loitering_classification.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 1,
    "id": "0100cdb5",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 2,
    "id": "8963ede7",
    "metadata": {},
    "outputs": [],
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "20e56204",
    "metadata": {},
    "outputs": [],
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "id": "968d1d91",
    "metadata": {},
    "outputs": [],
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 5,
    "id": "5000a2d0",
    "metadata": {},
    "outputs": [],
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 6,
    "id": "33a91b11",
    "metadata": {},
    "outputs": [],
@@ -798,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 7,
    "id": "e53ed509",
    "metadata": {},
    "outputs": [
@@ -862,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 16,
    "id": "12882299",
    "metadata": {},
    "outputs": [
@@ -870,25 +870,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculated scale_pos_weight: 5.220452848967405\n",
-      "Accuracy: 0.89\n",
+      "Calculated scale_pos_weight: 1.8776978417266188\n",
+      "Accuracy: 0.86\n",
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "       False       0.90      0.98      0.94     16744\n",
-      "        True       0.79      0.44      0.56      3256\n",
+      "       False       0.84      0.95      0.90       255\n",
+      "        True       0.89      0.69      0.78       145\n",
       "\n",
-      "    accuracy                           0.89     20000\n",
-      "   macro avg       0.84      0.71      0.75     20000\n",
-      "weighted avg       0.88      0.89      0.88     20000\n",
+      "    accuracy                           0.86       400\n",
+      "   macro avg       0.87      0.82      0.84       400\n",
+      "weighted avg       0.86      0.86      0.85       400\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "N = 100000\n",
-    "X_np = np.array(X[:N])\n",
-    "y_np = np.array(y[:N])\n",
+    "# N = 3000\n",
+    "n1 = 1000\n",
+    "n2 = 3000\n",
+    "X_np = np.array(X_new_2[n1:n2])\n",
+    "y_np = np.array(y_new_2[n1:n2])\n",
     "\n",
     "scaler = StandardScaler()\n",
     "X_scaled = scaler.fit_transform(X_np)\n",
@@ -949,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 17,
    "id": "577628b3",
    "metadata": {},
    "outputs": [],
@@ -977,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 24,
    "id": "cab0d9a9",
    "metadata": {},
    "outputs": [
@@ -1006,43 +1008,49 @@
        "      <th>std SOG</th>\n",
        "      <th>mean COG</th>\n",
        "      <th>entropy COG</th>\n",
+       "      <th>Cluster</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>3.659449</td>\n",
-       "      <td>1.302689</td>\n",
-       "      <td>163.045364</td>\n",
-       "      <td>2.887972</td>\n",
+       "      <td>3.829787</td>\n",
+       "      <td>1.467388</td>\n",
+       "      <td>186.405783</td>\n",
+       "      <td>2.728282</td>\n",
+       "      <td>730</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>3.745081</td>\n",
-       "      <td>1.301206</td>\n",
-       "      <td>184.039856</td>\n",
-       "      <td>3.250159</td>\n",
+       "      <td>3.309495</td>\n",
+       "      <td>0.676579</td>\n",
+       "      <td>185.839341</td>\n",
+       "      <td>2.592693</td>\n",
+       "      <td>933</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3.684348</td>\n",
-       "      <td>1.304718</td>\n",
-       "      <td>183.688801</td>\n",
-       "      <td>3.492897</td>\n",
+       "      <td>3.730376</td>\n",
+       "      <td>1.506461</td>\n",
+       "      <td>155.629657</td>\n",
+       "      <td>3.385174</td>\n",
+       "      <td>800</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>4.021296</td>\n",
-       "      <td>1.647447</td>\n",
-       "      <td>184.637818</td>\n",
-       "      <td>3.574024</td>\n",
+       "      <td>3.915514</td>\n",
+       "      <td>1.322592</td>\n",
+       "      <td>179.823914</td>\n",
+       "      <td>3.426678</td>\n",
+       "      <td>937</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4.184013</td>\n",
-       "      <td>1.584327</td>\n",
-       "      <td>183.768164</td>\n",
-       "      <td>3.581287</td>\n",
+       "      <td>4.312249</td>\n",
+       "      <td>1.814057</td>\n",
+       "      <td>215.195721</td>\n",
+       "      <td>3.360012</td>\n",
+       "      <td>680</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1050,65 +1058,71 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10046</th>\n",
-       "      <td>1.717975</td>\n",
-       "      <td>0.284671</td>\n",
-       "      <td>341.401360</td>\n",
-       "      <td>2.402078</td>\n",
+       "      <th>10004</th>\n",
+       "      <td>2.448815</td>\n",
+       "      <td>1.401958</td>\n",
+       "      <td>255.125761</td>\n",
+       "      <td>3.806239</td>\n",
+       "      <td>630</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10047</th>\n",
-       "      <td>1.765879</td>\n",
-       "      <td>0.265567</td>\n",
-       "      <td>342.137891</td>\n",
-       "      <td>1.787907</td>\n",
+       "      <th>10005</th>\n",
+       "      <td>3.707592</td>\n",
+       "      <td>2.493721</td>\n",
+       "      <td>253.620470</td>\n",
+       "      <td>3.789898</td>\n",
+       "      <td>585</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10048</th>\n",
-       "      <td>1.762064</td>\n",
-       "      <td>0.258114</td>\n",
-       "      <td>342.079229</td>\n",
-       "      <td>1.749892</td>\n",
+       "      <th>10006</th>\n",
+       "      <td>3.141613</td>\n",
+       "      <td>0.786805</td>\n",
+       "      <td>180.963658</td>\n",
+       "      <td>3.789898</td>\n",
+       "      <td>1079</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10049</th>\n",
-       "      <td>1.759755</td>\n",
-       "      <td>0.256881</td>\n",
-       "      <td>342.043731</td>\n",
-       "      <td>1.856780</td>\n",
+       "      <th>10007</th>\n",
+       "      <td>3.372008</td>\n",
+       "      <td>0.766924</td>\n",
+       "      <td>227.945145</td>\n",
+       "      <td>3.898069</td>\n",
+       "      <td>1121</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10050</th>\n",
-       "      <td>1.796767</td>\n",
-       "      <td>0.211837</td>\n",
-       "      <td>342.612795</td>\n",
-       "      <td>1.641760</td>\n",
+       "      <th>10008</th>\n",
+       "      <td>3.601093</td>\n",
+       "      <td>0.573217</td>\n",
+       "      <td>279.871852</td>\n",
+       "      <td>3.698069</td>\n",
+       "      <td>514</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>10051 rows × 4 columns</p>\n",
+       "<p>10009 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       mean SOG   std SOG    mean COG  entropy COG\n",
-       "0      3.659449  1.302689  163.045364     2.887972\n",
-       "1      3.745081  1.301206  184.039856     3.250159\n",
-       "2      3.684348  1.304718  183.688801     3.492897\n",
-       "3      4.021296  1.647447  184.637818     3.574024\n",
-       "4      4.184013  1.584327  183.768164     3.581287\n",
-       "...         ...       ...         ...          ...\n",
-       "10046  1.717975  0.284671  341.401360     2.402078\n",
-       "10047  1.765879  0.265567  342.137891     1.787907\n",
-       "10048  1.762064  0.258114  342.079229     1.749892\n",
-       "10049  1.759755  0.256881  342.043731     1.856780\n",
-       "10050  1.796767  0.211837  342.612795     1.641760\n",
+       "       mean SOG   std SOG    mean COG  entropy COG  Cluster\n",
+       "0      3.829787  1.467388  186.405783     2.728282      730\n",
+       "1      3.309495  0.676579  185.839341     2.592693      933\n",
+       "2      3.730376  1.506461  155.629657     3.385174      800\n",
+       "3      3.915514  1.322592  179.823914     3.426678      937\n",
+       "4      4.312249  1.814057  215.195721     3.360012      680\n",
+       "...         ...       ...         ...          ...      ...\n",
+       "10004  2.448815  1.401958  255.125761     3.806239      630\n",
+       "10005  3.707592  2.493721  253.620470     3.789898      585\n",
+       "10006  3.141613  0.786805  180.963658     3.789898     1079\n",
+       "10007  3.372008  0.766924  227.945145     3.898069     1121\n",
+       "10008  3.601093  0.573217  279.871852     3.698069      514\n",
        "\n",
-       "[10051 rows x 4 columns]"
+       "[10009 rows x 5 columns]"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1119,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 19,
    "id": "9c91879c",
    "metadata": {},
    "outputs": [
@@ -1181,7 +1195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": null,
    "id": "769d3788",
    "metadata": {},
    "outputs": [
@@ -18097,22 +18111,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": null,
    "id": "ee92065f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.3251430837801505\n",
+      "0.5756417611577248\n"
+     ]
+    }
+   ],
    "source": [
-    "clustered_samples_indices = X_hdbscan['Cluster'] != -1\n",
-    "X_hdbscan_clustered = X_hdbscan[clustered_samples_indices]\n",
-    "labels_clustered = X_hdbscan['Cluster'][clustered_samples_indices]\n",
+    "X_hdbscan_sample = X_hdbscan[:int(0.*len(X_hdbscan))]\n",
+    "clustered_samples_indices = X_hdbscan_sample['Cluster'] != -1\n",
+    "X_hdbscan_clustered = X_hdbscan_sample[clustered_samples_indices]\n",
+    "labels_clustered = X_hdbscan_sample['Cluster'][clustered_samples_indices]\n",
     "silhouette_avg = silhouette_score(X_hdbscan_clustered, labels_clustered)\n",
     "davies_bouldin_avg = davies_bouldin_score(X_hdbscan_clustered, labels_clustered)\n",
+    "print(silhouette_avg)\n",
+    "print(davies_bouldin_avg)\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 21,
    "id": "a9f4a3cf",
    "metadata": {},
    "outputs": [
@@ -18122,7 +18148,7 @@
        "0.44079945020911543"
       ]
      },
-     "execution_count": 236,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -18133,7 +18159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 22,
    "id": "b5a05528",
    "metadata": {},
    "outputs": [
@@ -18143,7 +18169,7 @@
        "0.9457894349487985"
       ]
      },
-     "execution_count": 237,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
