--- a/FishingBoatsAnomalyDetection/fishingboatsprediction/notebooks/loitering_classification.ipynb
+++ b/FishingBoatsAnomalyDetection/fishingboatsprediction/notebooks/loitering_classification.ipynb
@@ -18111,7 +18111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "ee92065f",
    "metadata": {},
    "outputs": [
@@ -18119,13 +18119,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.3251430837801505\n",
-      "0.5756417611577248\n"
+      "0.44262640733800057\n",
+      "0.8944281462268258\n"
      ]
     }
    ],
    "source": [
-    "X_hdbscan_sample = X_hdbscan[:int(0.*len(X_hdbscan))]\n",
+    "X_hdbscan_sample = X_hdbscan[:-500]\n",
     "clustered_samples_indices = X_hdbscan_sample['Cluster'] != -1\n",
     "X_hdbscan_clustered = X_hdbscan_sample[clustered_samples_indices]\n",
     "labels_clustered = X_hdbscan_sample['Cluster'][clustered_samples_indices]\n",
